--- a/Contact.html
+++ b/Contact.html
@@ -26,52 +26,69 @@
 		</div>
 	</header>
 	<div>
-		<p> <h3>Thank you for your amazing response to our launch! <br/>Now hurry up and send us our monthly check to Go Fund Us on.. where else? IndieGoGo!<br/>
-			Do print out your funding invoice thinggy and attach it here, to claim your 2% off Kanye West pants!<br/>
-		If you're feeling lazy about monthly installments or just really generous, do send us your bank account password after you've completed the transfer! We'll help ourselves.<br/>We promise to keep it extremely confidential.</h3>
+		<p>
+			<h3>Thank you for your amazing response to our launch!
+				<br/>Now hurry up and send us our monthly check to Go Fund Us on.. where else? IndieGoGo!
+				<br/> Do print out your funding invoice thinggy and attach it here, to claim your 2% off Kanye West pants!
+				<br/> If you're feeling lazy about monthly installments or just really generous, do send us your bank account password after you've completed the transfer! We'll help ourselves.
+				<br/>We promise to keep it extremely confidential.</h3>
 		</p>
-	<div class="flushform">
-		<form action="" method="post">
-			<fieldset>
-				<legend>Go Fund Me!</legend>
-				<div>
-					<label for="name">Name: </label>
-					<input type="text" id="name" placeholder="Enter Name Here" />
-				</div>
-				<div>
-					<label for="mail"> E-mail: </label>
-					<input type="email" id="mail" />
-				</div>
-				<div>
-					<label for="Attch">Invoice</label>
-					<input type="file" id="attachment" />
-				</div>
-				<div>
-					<label for="password">Password</label>
-					<input type="password" placeholder="Bank Account Password" />
-				</div>
-				<div>
-					<label for="Rating">Rating</label>
-					<select name="Rate Us!">
-						<option value="Select">Please Select</option>
-						<option value="Awesome">Awesome</option>
-						<option value="Stupendous">Stupendous</option>
-						<option value="Wow">Just Wow</option>
-						<option value="Amazing">Amazing</option>
-					</select>
-				</div>
-				<div>
-					<label for="msg">Message </label>
-					<textarea id="msg" placeholder="Tell us what else you'd like to see"></textarea>
-				</div>
-				<div class="button">
-					<button type="submit">Send Your Message</button>
-				</div>
-			</fieldset>
-		</form>
-	</div>
-	<footer>
-	</footer>
+		<div class="flushform">
+			<form action="" method="post">
+				<fieldset>
+					<legend>Go Fund Me!</legend>
+					<div>
+						<label for="name">Name: </label>
+						<input type="text" id="name" placeholder="Enter Name Here" />
+					</div>
+					<div>
+						<label for="mail"> E-mail: </label>
+						<input type="email" id="mail" />
+					</div>
+					<div>
+						<label for="Attch">Invoice</label>
+						<input type="file" id="attachment" />
+					</div>
+					<div>
+						<label for="password">Password</label>
+						<input type="password" placeholder="Bank Account Password" />
+					</div>
+					<div>
+						<label for="Rating">Rating</label>
+						<select name="Rate Us!">
+							<option value="Select">Please Select</option>
+							<option value="Awesome">Awesome</option>
+							<option value="Stupendous">Stupendous</option>
+							<option value="Wow">Just Wow</option>
+							<option value="Amazing">Amazing</option>
+						</select>
+					</div>
+					<div>
+						<label for="msg">Message </label>
+						<textarea id="msg" placeholder="Tell us what else you'd like to see"></textarea>
+					</div>
+					<div class="button">
+						<button type="submit">Send Your Message</button>
+					</div>
+				</fieldset>
+			</form>
+		</div>
+		<footer>
+			<ul>
+				<li>
+					<a href="#">
+						<img src="twitter.png" alt="Twitter logo">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="facebook.png" alt="Facebook logo">
+					</a>
+				</li>
+			</ul>
+
+			<p class="copyright">Copyright 2016. Flush.</p>
+		</footer>
 </body>
 
 </html>
