--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 		</div>
 		</section>
 	</div>
+	<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+			<!-- front content -->
+		</div>
+		<div class="back">
+			<!-- back content -->
+		</div>
+	</div>
+</div>
 	<footer>
 	<ul>
 	<li>
